# devcontainer

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .pymarkdown  .taplo.toml  .trivyignore  .typos.toml  .vig-os  .vulnixignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  Containerfile  LICENSE  Makefile  PR.md  README.md  SECURITY.md  TESTING.md  flake.nix  install.sh  justfile  justfile.base  justfile.gh  justfile.podman  justfile.worktree  package-lock.json  package.json  pyproject.toml  renovate.json  zizmor.yml
assets/workspace/: .gitignore  .pre-commit-config.yaml  .vig-os  CHANGELOG.md  LICENSE  README.md  SECURITY.md  flake.nix  justfile  justfile.project  pyproject.toml  renovate.json
assets/workspace/.claude/: agent-models.toml
assets/workspace/.cursor/: agent-models.toml
assets/workspace/.cursor/commands/: brainstorm.md  check-ci.md  commit-msg.md  create-issue.md  tdd.md  verify.md
assets/workspace/.cursor/rules/: branch-naming.mdc  commit-messages.mdc  tdd.mdc
assets/workspace/.devcontainer/: .gitignore  CHANGELOG.md  MOUNTS.md  README.md  devcontainer.json  docker-compose.local.yaml  docker-compose.project.yaml  docker-compose.yml  initialize.sh  justfile.base  justfile.devc  justfile.gh  justfile.worktree  post-attach.sh  workspace.code-workspace.example
assets/workspace/.devcontainer/scripts/: copy-host-user-conf.sh  devc-remote.sh  gh_issues.py  init-git.sh  init-precommit.sh  initialize.sh  post-attach.sh  post-create.sh  post-start.sh  setup-claude.sh  setup-git-conf.sh  setup-tailscale.sh  verify-auth.sh  version-check.sh
assets/workspace/.githooks/: pre-commit
assets/workspace/.github/: agent-blocklist.toml  label-taxonomy.toml  pull_request_template.md  renovate-default.json
assets/workspace/.github/ISSUE_TEMPLATE/: ci_build.yml  docs.yml
assets/workspace/.github/workflows/: ci-container.yml  ci.yml  codeql.yml  prepare-release.yml  promote-release.yml  release-core.yml  release-publish.yml  release.yml  scorecard.yml  (+3 more)
assets/workspace/docs/: COMMIT_MESSAGE_STANDARD.md  container-ci-quirks.md
assets/workspace/scripts/: devc-remote.sh
assets/workspace/tests/: __init__.py  test_example.py
(+1361 files in other folders)
