[project]
name = "devcontainer"
version = "0.1.1"
description = "vigOS development environment"
requires-python = "==3.12.10"
dependencies = [
    "github-backup>=0.50.3",
    "jinja2>=3.1.0",
    "pexpect>=4.9.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "testinfra>=6.0.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
    "pip-licenses>=5.0.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-testinfra>=10.2.2",
    "pytest-docker>=3.2.3",
    "pexpect>=4.8.0",
    "testcontainers>=4.9.0",
    "bcrypt>=5.0.0",
]

[tool.ruff]
# Black-compatible line length
line-length = 88

# Target Python 3.12
target-version = "py312"

[tool.ruff.lint]

extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
]

# Ignore specific rules if needed
ignore = []

[tool.ruff.format]
# Use double quotes for strings (Black compatible)
quote-style = "double"

# Use spaces for indentation (Black compatible)
indent-style = "space"

[tool.pytest.ini_options]
# Suppress deprecation warnings from testcontainers library
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
]
