[project]
name = "{{SHORT_NAME}}"
version = "0.1.0"
description = "{{SHORT_NAME}} project"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
science = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
all = [
    "{{SHORT_NAME}}[dev,science]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{SHORT_NAME}}"]

[dependency-groups]
dev = [
    "hatchling>=1.25",
]
